# highwind-python

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
highwind/: __init__.py  client.py  client_factory.py  deployment_inference.py  gradio_app.py  use_case.py
highwind_python/: highwind_client.py
tests/: conftest.py  test_client.py  test_client_factory.py  test_gradio_app.py  test_highwind_client.py  test_use_case.py
tests/fixtures/: deployed_use_case.json  deployment_inference.json  use_case.json
